# aurora_test

./: Dockerfile  README.md  build.sh  run_client.sh  run_service.sh
conf_manager_application/: main.cpp
conf_manager_application1/: CMakeLists.txt
configuration_manager_service/: CMakeLists.txt  ConfigurationManager.cpp  ConfigurationManager.hpp  main.cpp
